# autogui-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Autogui.cpp  Autogui.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  SimpleAutoGUI.h  Utils.h
